--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Swagatika's personal site</title>
+  <title>Swagatika's site</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
