--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,12 @@
   <p>Email - swagatika123beyourself@gmail.com</p>
   <hr />
   <form action="mailto:swagatika123beyourself@gmail.com" method="post" enctype="text/plain">
-    <label>Your name:</label>
-    <input type="text" name="name" value="">
+    <label>Your first name:</label>
+    <input type="text" name="first name" value="">
+    <input type="color" name="" value="">
+    <br />
+    <label>Your last name:</label>
+    <input type="text" name="last name" value="">
     <input type="color" name="" value="">
     <br />
     <br />
