--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,10 @@
     <br />
     <label> Your Email: </label>
     <input type="email" name="email" value=""><br />
+    <label> Your Phone number: </label>
+    <input type="tel" id ="phone" name="phone" pattern ="[0-9]"><br />
+    <label>your date of birth: </label>
+    <input type="date" id="birthday" name="birthday">
     <label>message:</label><br />
     <textarea name="message" rows="8" cols="80"></textarea>
     <input type="submit" name="">
